<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8C8C9"
    tools:context=".Rank">

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:backgroundTint="#E2312C"
        android:text="@string/strbtnConfirmar"
        android:textColorLink="#FF0000"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <ScrollView
        android:id="@+id/scrollViewUsers"
        android:layout_width="371dp"
        android:layout_height="462dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342">

        <TableLayout
            android:id="@+id/tableUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TableRow
                android:layout_width="357dp"
                android:layout_height="60dp"
                android:background="#E2312C">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:text="Nome"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:text="Pontos"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="#E2312C"
        app:itemTextColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Definição do BottomNavigationView -->
        <!-- Coloque os itens do menu aqui -->
        <!-- Exemplo de item de menu -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/navigation_loja"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/strDescIconSeçãoLoja"
                android:padding="10dp"
                android:src="@drawable/loja" />

            <ImageView
                android:id="@+id/navigation_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/strDescIconSeçãoHome"
                android:src="@drawable/home" />

            <ImageView
                android:id="@+id/navigation_bosses"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/strDescIconSeçãoBoss"
                android:padding="10dp"
                android:src="@drawable/bosses" />

            <ImageView
                android:id="@+id/navigation_online"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/strDescIconSeçãoOnline"
                android:padding="10dp"
                android:background="#C7C7C8"
                android:backgroundTint="#FF0700"
                android:src="@drawable/online" />

        </LinearLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <EditText
        android:id="@+id/edNome"
        android:layout_width="219dp"
        android:layout_height="39dp"
        android:ems="10"
        android:hint="@string/strphNome"
        android:inputType="text"
        android:maxLength="50"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/lbcarregando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#E1312C"
        android:text="Carregando...."
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <ImageView
        android:id="@+id/btnReload"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838"
        app:srcCompat="@drawable/reload" />

</androidx.constraintlayout.widget.ConstraintLayout>